Update workflow to remove invalid action

--- a/.github/workflows/apply-org-policy.yml
+++ b/.github/workflows/apply-org-policy.yml
@@ -3,25 +3,36 @@ on:
   workflow_dispatch:
     inputs:
       repos_csv:
-        description: "Optional owner/repo list comma-separated to also label/protect"
+        description: "owner/repo comma-separated (optional)"
         required: false
 jobs:
   apply:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cli/cli-action@v2
-      - run: sudo apt-get update && sudo apt-get install -y jq
-      - name: Auth
-        run: echo "${{ secrets.ORG_ADMIN_TOKEN }}" | gh auth login --with-token
+
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Auth gh
+        env:
+          GH_TOKEN: ${{ secrets.ORG_ADMIN_TOKEN }}
+        run: |
+          gh --version
+          echo "$GH_TOKEN" | gh auth login --with-token
+          gh auth status
+
       - name: Set env
         run: echo "ORG_NAME=${{ secrets.ORG_NAME }}" >> $GITHUB_ENV
+
       - name: Org settings
         run: bash github/scripts/org-settings.sh
+
       - name: Org ruleset
         run: bash github/scripts/org-ruleset.sh
-      - name: Optional per-repo label + protection
-        if: "${{ inputs.repos_csv != '' }}"
+
+      - name: Per-repo label + protection (optional)
+        if: ${{ inputs.repos_csv != '' }}
         run: |
           IFS=',' read -ra REPOS <<< "${{ inputs.repos_csv }}"
           for r in "${REPOS[@]}"; do
